# robust_multirobot_map_merging

./: .gitignore  CMakeLists.txt  README.md  package.xml
doc/: Doxyfile
doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _l_i_c_e_n_s_e_8md.html  _l_i_c_e_n_s_e_8md_source.html  _open_m_p_check_version_8c.html  _open_m_p_check_version_8c__incl.map  _open_m_p_check_version_8c__incl.md5  _open_m_p_check_version_8cpp.html  _open_m_p_check_version_8cpp__incl.map  _open_m_p_check_version_8cpp__incl.md5  _open_m_p_try_flag_8c.html  _open_m_p_try_flag_8c__incl.map  _open_m_p_try_flag_8c__incl.md5  _open_m_p_try_flag_8cpp.html  _open_m_p_try_flag_8cpp__incl.map  _open_m_p_try_flag_8cpp__incl.md5  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  catkin__generated_2installspace_2__setup__util_8py.html  catkin__generated_2installspace_2__setup__util_8py_source.html  class_f_m_c_1_1_c_graph_i_o-members.html  class_f_m_c_1_1_c_graph_i_o.html  class_f_m_c_1_1_c_graph_i_o_a3be1248d6e69f0898af9dfe26680bc37_icgraph.map  class_f_m_c_1_1_c_graph_i_o_a3be1248d6e69f0898af9dfe26680bc37_icgraph.md5  class_f_m_c_1_1_c_graph_i_o_a45d19b2b7d2b625aacfaa0a05a047473_icgraph.map  class_f_m_c_1_1_c_graph_i_o_a45d19b2b7d2b625aacfaa0a05a047473_icgraph.md5  class_f_m_c_1_1_c_graph_i_o_a6c82c4cd4de1f422f9b45e9f5ec81a4a_icgraph.map  class_f_m_c_1_1_c_graph_i_o_a6c82c4cd4de1f422f9b45e9f5ec81a4a_icgraph.md5  class_f_m_c_1_1_c_graph_i_o_a87478b50c742f298251a3415367b0f6b_icgraph.map  class_f_m_c_1_1_c_graph_i_o_a87478b50c742f298251a3415367b0f6b_icgraph.md5  class_f_m_c_1_1_c_graph_i_o_ab0d9d8ee2319d816029775d86b2812ce_cgraph.map  class_f_m_c_1_1_c_graph_i_o_ab0d9d8ee2319d816029775d86b2812ce_cgraph.md5  class_f_m_c_1_1_c_graph_i_o_ab0d9d8ee2319d816029775d86b2812ce_icgraph.map  class_f_m_c_1_1_c_graph_i_o_ab0d9d8ee2319d816029775d86b2812ce_icgraph.md5  class_f_m_c_1_1_c_graph_i_o_ae78143c82f98205cccd1b84de891b8c4_icgraph.map  class_f_m_c_1_1_c_graph_i_o_ae78143c82f98205cccd1b84de891b8c4_icgraph.md5  class_f_m_c_1_1_c_graph_i_o_ae800f96ed7c3484effe64a6d5b0646b9_icgraph.map  (+342 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  (+32 more)
doc/man/man3/: CMakeCCompilerId.c.3  CMakeCXXCompilerId.cpp.3  FMC.3  FMC_CGraphIO.3  LICENSE.md.3  README.md.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_build_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_build_CMakeFiles_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_build_CMakeFiles_3.5.2_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_build_CMakeFiles_3.5.2_CompilerIdCXX_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_build_CMakeFiles_3.5.2_CompilerIdC_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_build_catkin_generated_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_build_catkin_generated_installspace_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_build_devel_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_cmake-build-debug_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_cmake-build-debug_CMakeFiles_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_cmake-build-debug_CMakeFiles_3.12.1_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_cmake-build-debug_CMakeFiles_3.12.1_CompilerIdCXX_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_cmake-build-debug_CMakeFiles_3.12.1_CompilerIdC_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_cmake-build-debug_catkin_generated_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_cmake-build-debug_catkin_generated_installspace_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_cmake-build-debug_devel_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_examples_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_include_.3  _home_lajoiepy_Documents_master_mit_baseline_ws_src_robust_multirobot_map_merging_include_global_map_solver_.3  _setup_util.3  _setup_util.py.3  (+53 more)
examples/: example_node.cpp
include/: graph_utils.h  pairwise_consistency.h  pairwise_consistency_maximization.h  robust_multirobot_mapping.h  robust_multirobot_slam.h
include/global_map_solver/: global_map_solver.h
include/graph_utils/: graph_types.h  graph_utils_functions.h
include/pairwise_consistency/: pairwise_consistency.h
include/robot_local_map/: robot_local_map.h  robot_measurements.h
pose_graph_datasets/: CSAIL_interrobot_loop_closures.g2o  CSAIL_robot1.g2o  CSAIL_robot2.g2o  README.md
pose_graph_datasets/CSAIL_dataset/: CSAIL_interrobot_loop_closures_outliers.g2o  CSAIL_outliers.g2o  CSAIL_robot2.g2o
results/: consistency_matrix.clq.mtx  consistent_loop_closures.txt
src/: graph_utils.cpp  pairwise_consistency.cpp  pairwise_consistency_maximization.cpp  robust_multirobot_slam.cpp
src/global_map_solver/: global_map_solver.cpp
src/graph_utils/: graph_utils.cpp  graph_utils_functions.cpp
src/pairwise_consistency/: pairwise_consistency.cpp
src/robot_local_map/: robot_local_map.cpp  robot_measurements.cpp
test/: example_node.cpp  main.cpp
(+15 files in other folders)
